apps/argocd/argocd-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.lab.hill.home`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.lab.hill.home`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default

# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: argocd-cert
#   namespace: argocd
# spec:
#   secretName: argocd-tls-secret
#   issuerRef:
#     name: ssl-issuer
#     kind: ClusterIssuer
#   dnsNames:
#     - argocd.lab.hill.home
